--- a/dashboard/src/css/home.css
+++ b/dashboard/src/css/home.css
@@ -43,6 +43,11 @@
 .schedule-table.filtering .ts-item.show {
   opacity: 1;
   transition: all 0.5s;
+  
+}
+.hide {
+  opacity: 0;
+  display: none;
 }
 
 #schedule .filters {
