--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -7,6 +7,10 @@
   right: 0px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15) !important;
 }
+.shownav{
+  display: block !important;
+  
+}
 
 .background-header .logo,
 .background-header .main-nav .nav li a {
